third_party/move/move-compiler-v2/tests/more-v1/liveness/dead_refs_branch_invalid.exp

Diagnostics:
error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/more-v1/liveness/dead_refs_branch_invalid.move:8:9
   │
 4 │         let x_ref = &mut x;
   │                     ------ local `x` previously mutably borrowed here
   ·
 8 │         _ = x;
   │         ^ copy attempted here
 9 │         _ = move x;
10 │         *x_ref = 0;
   │         ---------- conflicting reference `x_ref` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/more-v1/liveness/dead_refs_branch_invalid.move:9:13
   │
 4 │         let x_ref = &mut x;
   │                     ------ local `x` previously mutably borrowed here
   ·
 9 │         _ = move x;
   │             ^^^^^^ move attempted here
10 │         *x_ref = 0;
   │         ---------- conflicting reference `x_ref` used here

error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/more-v1/liveness/dead_refs_branch_invalid.move:20:9
   │
15 │         let x_ref = &mut x;
   │                     ------ local `x` previously mutably borrowed here
   ·
20 │         _ = x;
   │         ^ copy attempted here
21 │         _ = move x;
22 │         _ = *x_ref;
   │             ------ conflicting reference `x_ref` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/more-v1/liveness/dead_refs_branch_invalid.move:21:13
   │
15 │         let x_ref = &mut x;
   │                     ------ local `x` previously mutably borrowed here
   ·
21 │         _ = move x;
   │             ^^^^^^ move attempted here
22 │         _ = *x_ref;
   │             ------ conflicting reference `x_ref` used here
